src/main/java/com/example/recruit_page_wwy/_core/error/ex/Exception400.java
package com.example.recruit_page_wwy._core.error.ex;

public class Exception400 extends RuntimeException {
    public Exception400(String message) {
        super(message);
    }
}
